--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_login: ^1.0.3
   google_sign_in: ^6.2.1
   easy_splash_screen: ^1.0.4
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
