--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   google_sign_in: ^6.2.1
   easy_splash_screen: ^1.0.4
   shared_preferences: ^2.2.3
+  http: ^1.2.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
