--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.2.3
   http: ^1.2.0
   flutter_dotenv: ^5.1.0
+  fl_chart: ^0.40.0
 
 dev_dependencies:
   flutter_test:
