--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   http: ^1.2.0
   flutter_dotenv: ^5.1.0
   fl_chart: ^0.40.0
+  flutter_vibrate: ^1.3.0
+  vibration: ^1.9.0
 
 dev_dependencies:
   flutter_test:
