--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   fl_chart: ^0.40.0
   flutter_vibrate: ^1.3.0
   vibration: ^1.9.0
+  webview_flutter: ^4.2.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
