--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   vibration: ^1.9.0
   webview_flutter: ^4.2.0
   url_launcher: ^6.3.0
+  razorpay_flutter: ^1.3.7
 
 dev_dependencies:
   flutter_test:
