--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   webview_flutter: ^4.2.0
   url_launcher: ^6.3.0
   razorpay_flutter: ^1.3.7
+  click_to_copy: ^0.0.1
 
 dev_dependencies:
   flutter_test:
