--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   webview_flutter: ^4.2.0
   url_launcher: ^6.3.0
   razorpay_flutter: ^1.3.7
+  google_gemini: ^0.1.2
+  google_generative_ai: ^0.4.4
 
 dev_dependencies:
   flutter_test:
