--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   razorpay_flutter: ^1.3.7
   google_gemini: ^0.1.2
   google_generative_ai: ^0.4.4
+  file_picker: ^8.0.0+1
+  firebase_storage: ^11.6.9
 
 dev_dependencies:
   flutter_test:
