--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_generative_ai: ^0.4.4
   file_picker: ^8.0.0+1
   firebase_storage: ^11.6.9
+  awesome_notifications: ^0.9.3+1
 
 dev_dependencies:
   flutter_test:
