--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.0+2
+version: 2.0.1+3
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -57,6 +57,7 @@ dependencies:
   file_picker: ^8.0.0+1
   firebase_storage: ^11.6.9
   awesome_notifications: ^0.9.3+1
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
