--- a/crypto-webpage/package.json
+++ b/crypto-webpage/package.json
@@ -9,6 +9,7 @@
     "@vercel/analytics": "^1.3.1",
     "firebase": "^10.12.5",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
